updated to include difficulty

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 __pycache__/fileConsole.cpython-310.pyc
 __pycache__/individual.cpython-310.pyc
 __pycache__/similar.cpython-310.pyc
+__pycache__/difficulty_manager.cpython-310.pyc
+__pycache__/hint_generator.cpython-310.pyc
+__pycache__/playgame.cpython-310.pyc
