--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ __pycache__/similar.cpython-310.pyc
 __pycache__/difficulty_manager.cpython-310.pyc
 __pycache__/hint_generator.cpython-310.pyc
 __pycache__/playgame.cpython-310.pyc
+__pycache__/
+.gitignore
+venv/
